--- a/Tengu/Tengu.csproj
+++ b/Tengu/Tengu.csproj
@@ -16,5 +16,6 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.12" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.12" />
     <PackageReference Include="Material.Avalonia" Version="2.5.0.78-nightly" />
+    <PackageReference Include="Material.Icons.Avalonia" Version="1.0.2" />
   </ItemGroup>
 </Project>
