--- a/Tengu/Tengu.csproj
+++ b/Tengu/Tengu.csproj
@@ -18,7 +18,7 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.12" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.12" />
-    <PackageReference Include="Material.Avalonia" Version="2.5.0.78-nightly" />
+    <PackageReference Include="Material.Avalonia" Version="3.0.0-rc0.82-nightly" />
     <PackageReference Include="Material.Icons.Avalonia" Version="1.0.2" />
   </ItemGroup>
 </Project>
