--- a/Tengu/Tengu.csproj
+++ b/Tengu/Tengu.csproj
@@ -20,5 +20,6 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.12" />
     <PackageReference Include="Material.Avalonia" Version="3.0.0-rc0.82-nightly" />
     <PackageReference Include="Material.Icons.Avalonia" Version="1.0.2" />
+    <PackageReference Include="Tengu.Business.API" Version="1.0.0" />
   </ItemGroup>
 </Project>
