--- a/Tengu/Tengu.csproj
+++ b/Tengu/Tengu.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0-preview.1.22076.8" />
     <PackageReference Include="NLog" Version="5.0.0-rc2" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.0.0-rc2" />
+    <PackageReference Include="Paginator.Avalonia" Version="1.0.0" />
     <PackageReference Include="Tengu.Business.API" Version="1.0.0" />
   </ItemGroup>
 </Project>
