--- a/Tengu/Tengu.csproj
+++ b/Tengu/Tengu.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
     <None Remove=".gitignore" />
+    <None Remove="Assets\kitsu.png" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AsyncImageLoader.Avalonia" Version="2.1.0" />
