--- a/Tengu/nlog.config
+++ b/Tengu/nlog.config
@@ -20,5 +20,7 @@
 		<logger name="Latest" minlevel="Trace" writeTo="logFile" />
 		<logger name="Search" minlevel="Trace" writeTo="logFile" />
 		<logger name="Upcoming" minlevel="Trace" writeTo="logFile" />
+		<logger name="Settings" minlevel="Trace" writeTo="logFile" />
+		<logger name="ProgramConfig" minlevel="Trace" writeTo="logFile" />
 	</rules>
 </nlog>
