Implemented Change download directory option

--- a/Tengu/nlog.config
+++ b/Tengu/nlog.config
@@ -5,7 +5,7 @@
 	<targets>
 		<target name="logFile" xsi:type="File"
 				layout="${longdate} | ${level} >> ${message} | ${exception:innerFormat=Message,StackTrace}"
-				fileName="${basedir}/Log/Tengu.${logger}.log"
+				fileName="${basedir}/Logging/Tengu.${logger}.log"
 				keepFileOpen="true"
 				autoFlush="true"
 				deleteOldFileOnStartup="true"
