--- a/Tengu/Tengu.csproj
+++ b/Tengu/Tengu.csproj
@@ -15,6 +15,8 @@
     <AvaloniaResource Include="Assets\**" />
     <None Remove=".gitignore" />
     <None Remove="Assets\kitsu.png" />
+    <None Remove="Assets\logo_animated.gif" />
+    <None Remove="Assets\tengu_logo-C4.png" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AsyncImageLoader.Avalonia" Version="2.1.0" />
