--- a/Tengu/Tengu.csproj
+++ b/Tengu/Tengu.csproj
@@ -16,7 +16,8 @@
     <None Remove=".gitignore" />
     <None Remove="Assets\kitsu.png" />
     <None Remove="Assets\logo_animated.gif" />
-    <None Remove="Assets\tengu_logo-C4.png" />
+    <None Remove="Assets\tengu_logo-C2-2.png" />
+    <None Remove="Assets\tengu_logo-C2.png" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AsyncImageLoader.Avalonia" Version="2.1.0" />
