Added checkbox style

--- a/Tengu.Delicious/Tengu.Delicious.csproj
+++ b/Tengu.Delicious/Tengu.Delicious.csproj
@@ -21,6 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Remove="Theme\CheckBoxStyles.xaml" />
       <None Remove="Theme\TextBlockStyles.xaml" />
       <None Remove="Theme\TextBoxStyles.xaml" />
       <None Remove="Theme\ToggleButtonStyles.xaml" />
@@ -31,6 +32,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <AvaloniaResource Update="Theme\CheckBoxStyles.xaml">
+        <Generator>MSBuild:Compile</Generator>
+      </AvaloniaResource>
       <AvaloniaResource Update="Theme\ToggleButtonStyles.xaml">
         <Generator></Generator>
       </AvaloniaResource>
