--- a/Tengu/Tengu.csproj
+++ b/Tengu/Tengu.csproj
@@ -25,9 +25,8 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.14" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.14" />
+    <PackageReference Include="FluentAvaloniaUI" Version="1.3.5" />
+    <PackageReference Include="FluentIcons.Avalonia" Version="1.1.170.1" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Tengu.Delicious\Tengu.Delicious.csproj" />
   </ItemGroup>
 </Project>
