--- a/Tengu/Tengu.csproj
+++ b/Tengu/Tengu.csproj
@@ -11,6 +11,7 @@
     <Folder Include="Models\" />
     <AvaloniaResource Include="Assets\**" />
     <None Remove=".gitignore" />
+    <None Remove="Assets\tengu.svg" />
   </ItemGroup>
   <ItemGroup>
     <!--This helps with theme dll-s trimming.
@@ -25,6 +26,7 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.14" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.14" />
+    <PackageReference Include="Avalonia.Svg.Skia" Version="0.10.13" />
     <PackageReference Include="FluentAvaloniaUI" Version="1.3.5" />
     <PackageReference Include="FluentIcons.Avalonia" Version="1.1.170.1" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
