--- a/Tengu/Tengu.csproj
+++ b/Tengu/Tengu.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <!--Avalonia doesen't support TrimMode=link currently,but we are working on that https://github.com/AvaloniaUI/Avalonia/issues/6892 -->
     <TrimMode>copyused</TrimMode>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
@@ -28,7 +28,7 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.14" />
     <PackageReference Include="Avalonia.Svg.Skia" Version="0.10.13" />
     <PackageReference Include="FluentAvaloniaUI" Version="1.3.5" />
-    <PackageReference Include="FluentIcons.Avalonia" Version="1.1.170.1" />
+    <PackageReference Include="Material.Icons.Avalonia" Version="1.0.2" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
   </ItemGroup>
 </Project>
