--- a/Tengu/Tengu.csproj
+++ b/Tengu/Tengu.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.14" />
     <PackageReference Include="FluentAvaloniaUI" Version="1.3.5" />
     <PackageReference Include="Material.Icons.Avalonia" Version="1.0.2" />
+    <PackageReference Include="Tengu.Business.API" Version="1.0.10" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
   </ItemGroup>
 </Project>
