--- a/Tengu/Tengu.csproj
+++ b/Tengu/Tengu.csproj
@@ -25,6 +25,7 @@
     <TrimmableAssembly Include="Avalonia.Themes.Default" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AsyncImageLoader.Avalonia" Version="2.1.0" />
     <PackageReference Include="Avalonia" Version="0.10.14" />
     <PackageReference Include="Avalonia.Desktop" Version="0.10.14" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
@@ -32,7 +33,7 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.14" />
     <PackageReference Include="FluentAvaloniaUI" Version="1.3.5" />
     <PackageReference Include="Material.Icons.Avalonia" Version="1.0.2" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0-preview.4.22229.4" />
     <PackageReference Include="Tengu.Business.API" Version="1.0.10" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
   </ItemGroup>
