--- a/Tengu.Shared/Tengu.Shared.csproj
+++ b/Tengu.Shared/Tengu.Shared.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Avalonia" Version="0.10.14" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NLog" Version="5.0.0" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
