--- a/Tengu/Tengu.csproj
+++ b/Tengu/Tengu.csproj
@@ -34,7 +34,7 @@
     <PackageReference Include="FluentAvaloniaUI" Version="1.4.0" />
     <PackageReference Include="Material.Icons.Avalonia" Version="1.0.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0-preview.5.22301.12" />
-    <PackageReference Include="Tengu.Business.API" Version="1.2.1-b3b5a" />
+    <PackageReference Include="Tengu.Business.API" Version="1.2.896.1213" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
   </ItemGroup>
   <ItemGroup>
