--- a/Tengu.Shared/Tengu.Shared.csproj
+++ b/Tengu.Shared/Tengu.Shared.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="NLog.Extensions.Logging" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
