small change on log folder name

--- a/Tengu.Shared/nlog.config
+++ b/Tengu.Shared/nlog.config
@@ -5,7 +5,7 @@
     <targets>
         <target name="logfile" xsi:type="File"
                 layout="${date:format=dd-MM-yyyy HH\:mm\:ss fff} | ${pad:padding=5:inner=${level:uppercase=true}} | ${message} | ${exception:format=@}"
-                fileName="${basedir}/logs/${logger}.log"
+                fileName="${basedir}/Logs/${logger}.log"
                 deleteOldFileOnStartup="true"
                 maxArchiveDays="3"
                 keepFileOpen="true"
