--- a/Tengu/Tengu.csproj
+++ b/Tengu/Tengu.csproj
@@ -25,7 +25,7 @@
     <TrimmableAssembly Include="Avalonia.Themes.Default" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="AsyncImageLoader.Avalonia" Version="2.1.1" />
+    <PackageReference Include="AsyncImageLoader.Avalonia" Version="2.2.0" />
     <PackageReference Include="Avalonia" Version="0.10.15" />
     <PackageReference Include="Avalonia.Desktop" Version="0.10.15" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
@@ -34,7 +34,7 @@
     <PackageReference Include="FluentAvaloniaUI" Version="1.4.0" />
     <PackageReference Include="Material.Icons.Avalonia" Version="1.0.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0-preview.5.22301.12" />
-    <PackageReference Include="Tengu.Business.API" Version="1.2.896.1244" />
+    <PackageReference Include="Tengu.Business.API" Version="1.2.902.1196-dev" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
   </ItemGroup>
   <ItemGroup>
