--- a/Tengu/Tengu.csproj
+++ b/Tengu/Tengu.csproj
@@ -8,16 +8,22 @@
 	<Deterministic>False</Deterministic>
 	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
+    <ApplicationIcon>Assets\tengu.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
     <None Remove=".gitignore" />
     <None Remove="Assets\itachi.svg" />
+    <None Remove="Assets\tengu.ico" />
+    <None Remove="Assets\tengu.png" />
     <None Remove="Assets\tengu.svg" />
     <None Remove="Languages\English.json" />
   </ItemGroup>
   <ItemGroup>
     <AvaloniaResource Include="Languages\English.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\tengu.ico" />
   </ItemGroup>
   <ItemGroup>
     <!--This helps with theme dll-s trimming.
