--- a/Tengu/Tengu.csproj
+++ b/Tengu/Tengu.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HandyControls" Version="3.4.2" />
+  </ItemGroup>
+
 </Project>
